# bnct-fix

./: CMakeLists.txt  README.md  exampleB3a.cc  run_bsa_novis.mac
backups_after_fix/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  RunAction.hh  StackingAction.hh
backups_after_fix/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  RunAction.cc
fix_backup/: DetectorConstruction.cc.bak
fixes_backup/include/: ActionInitialization.hh  DetectorConstruction.hh.bak  EventAction.hh  PhysicsList.hh.bak  PrimaryGeneratorAction.hh.bak  RunAction.hh  StackingAction.hh
fixes_backup/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstruction.cc.bak  EventAction.cc  PhysicsList.cc.bak  StackingAction.cc
include/: DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh.bak
src/: DetectorConstruction.cc  DetectorConstruction_head.tmp  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc.bak  RunAction.cc  RunAction.cc.bak  StackingAction.cc.bak
